// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-device-viewer> Component basic usage 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
      <bolt-image src="/fixtures/device-screenshot--phone.jpg"
                  srcset="/fixtures/device-screenshot--phone-50.jpg 50w, /fixtures/device-screenshot--phone-100.jpg 100w, /fixtures/device-screenshot--phone-200.jpg 200w, /fixtures/device-screenshot--phone-320.jpg 320w, /fixtures/device-screenshot--phone-480.jpg 480w, /fixtures/device-screenshot--phone-640.jpg 640w, /fixtures/device-screenshot--phone-800.jpg 800w, /fixtures/device-screenshot--phone-1024.jpg 1024w, /fixtures/device-screenshot--phone-1366.jpg 1366w, /fixtures/device-screenshot--phone-1536.jpg 1536w, /fixtures/device-screenshot--phone-1920.jpg 1920w, /fixtures/device-screenshot--phone-2560.jpg 2560w, /fixtures/device-screenshot--phone-2880.jpg 2880w"
                  sizes="(min-width: 600px) 150vw, 100vw"
                  ratio="3000/5336"
                  zoom
                  style="background-color: hsl(233, 33%, 97%);"
      >
        <bolt-ratio ratio="375/667">
          <replace-with-children class="c-bolt-ratio"
                                 style="padding-bottom: calc((667 / 375) * 100%); --aspect-ratio: 0.56221889055472;"
          >
            <img class="c-bolt-image__image-placeholder"
                 data-zoom="/fixtures/device-screenshot--phone.jpg"
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
            >
            <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
                 data-srcset="/fixtures/device-screenshot--phone-50.jpg 50w, /fixtures/device-screenshot--phone-100.jpg 100w, /fixtures/device-screenshot--phone-200.jpg 200w, /fixtures/device-screenshot--phone-320.jpg 320w, /fixtures/device-screenshot--phone-480.jpg 480w, /fixtures/device-screenshot--phone-640.jpg 640w, /fixtures/device-screenshot--phone-800.jpg 800w, /fixtures/device-screenshot--phone-1024.jpg 1024w, /fixtures/device-screenshot--phone-1366.jpg 1366w, /fixtures/device-screenshot--phone-1536.jpg 1536w, /fixtures/device-screenshot--phone-1920.jpg 1920w, /fixtures/device-screenshot--phone-2560.jpg 2560w, /fixtures/device-screenshot--phone-2880.jpg 2880w"
                 data-sizes="(min-width: 600px) 150vw, 100vw"
                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                 data-zoom="/fixtures/device-screenshot--phone.jpg"
            >
            <noscript>
              <img class="c-bolt-image__image"
                   src="/fixtures/device-screenshot--phone.jpg"
                   srcset="/fixtures/device-screenshot--phone-50.jpg 50w, /fixtures/device-screenshot--phone-100.jpg 100w, /fixtures/device-screenshot--phone-200.jpg 200w, /fixtures/device-screenshot--phone-320.jpg 320w, /fixtures/device-screenshot--phone-480.jpg 480w, /fixtures/device-screenshot--phone-640.jpg 640w, /fixtures/device-screenshot--phone-800.jpg 800w, /fixtures/device-screenshot--phone-1024.jpg 1024w, /fixtures/device-screenshot--phone-1366.jpg 1366w, /fixtures/device-screenshot--phone-1536.jpg 1536w, /fixtures/device-screenshot--phone-1920.jpg 1920w, /fixtures/device-screenshot--phone-2560.jpg 2560w, /fixtures/device-screenshot--phone-2880.jpg 2880w"
              >
            </noscript>
          </replace-with-children>
        </bolt-ratio>
      </bolt-image>
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component decvice-viewer display: ipad 1`] = `
<bolt-device-viewer class="c-bolt-ipad-viewer c-bolt-device-viewer marvel-device c-bolt-ipad-viewer--black c-bolt-ipad-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-ipad-viewer__inner">
    <div class="c-bolt-ipad-viewer__top-bar">
    </div>
    <div class="c-bolt-ipad-viewer__bottom-bar">
    </div>
    <div class="c-bolt-ipad-viewer__sensor">
    </div>
    <div class="c-bolt-ipad-viewer__sleep">
    </div>
    <div class="c-bolt-ipad-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-ipad-viewer__camera">
    </div>
    <div class="c-bolt-ipad-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-ipad-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-ipad-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component decvice-viewer display: iphone8 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component decvice-viewer display: macbook 1`] = `
<bolt-device-viewer class="c-bolt-macbook-viewer c-bolt-device-viewer marvel-device c-bolt-macbook-viewer--black c-bolt-macbook-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-macbook-viewer__inner">
    <div class="c-bolt-macbook-viewer__top-bar">
    </div>
    <div class="c-bolt-macbook-viewer__bottom-bar">
    </div>
    <div class="c-bolt-macbook-viewer__sensor">
    </div>
    <div class="c-bolt-macbook-viewer__sleep">
    </div>
    <div class="c-bolt-macbook-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-macbook-viewer__camera">
    </div>
    <div class="c-bolt-macbook-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-macbook-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-macbook-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: black 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: gold 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--gold c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: landscape 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--landscape">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: portrait 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--black c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component device-viewer display: silver 1`] = `
<bolt-device-viewer class="c-bolt-iphone8-viewer c-bolt-device-viewer marvel-device c-bolt-iphone8-viewer--silver c-bolt-iphone8-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-iphone8-viewer__inner">
    <div class="c-bolt-iphone8-viewer__top-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__bottom-bar">
    </div>
    <div class="c-bolt-iphone8-viewer__sensor">
    </div>
    <div class="c-bolt-iphone8-viewer__sleep">
    </div>
    <div class="c-bolt-iphone8-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-iphone8-viewer__camera">
    </div>
    <div class="c-bolt-iphone8-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-iphone8-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-iphone8-viewer__screen">
    </div>
  </div>
</bolt-device-viewer>
`;

exports[`<bolt-device-viewer> Component usage with magnification 1`] = `
<bolt-device-viewer class="c-bolt-ipad-viewer c-bolt-device-viewer marvel-device c-bolt-ipad-viewer--portrait">
  <div class="c-bolt-device-viewer__inner c-bolt-ipad-viewer__inner">
    <div class="c-bolt-ipad-viewer__top-bar">
    </div>
    <div class="c-bolt-ipad-viewer__bottom-bar">
    </div>
    <div class="c-bolt-ipad-viewer__sensor">
    </div>
    <div class="c-bolt-ipad-viewer__sleep">
    </div>
    <div class="c-bolt-ipad-viewer__volume">
    </div>
    <div class="c-bolt-device-viewer__camera c-bolt-ipad-viewer__camera">
    </div>
    <div class="c-bolt-ipad-viewer__speaker">
    </div>
    <div class="c-bolt-device-viewer__home c-bolt-ipad-viewer__home">
    </div>
    <div class="c-bolt-device-viewer__screen c-bolt-ipad-viewer__screen">
      <bolt-image-zoom>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--top-left">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--top-center">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--top-right">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--middle-left">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--middle-center">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--middle-right">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--bottom-left">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--bottom-center">
        </span>
        <span class="c-bolt-image-zoom__tilt c-bolt-image-zoom__tilt--bottom-right">
        </span>
        <bolt-image src="/fixtures/device-screenshot--tablet-portrait.jpg"
                    srcset="/fixtures/device-screenshot--tablet-portrait-50.jpg 50w, /fixtures/device-screenshot--tablet-portrait-100.jpg 100w, /fixtures/device-screenshot--tablet-portrait-200.jpg 200w, /fixtures/device-screenshot--tablet-portrait-320.jpg 320w, /fixtures/device-screenshot--tablet-portrait-480.jpg 480w, /fixtures/device-screenshot--tablet-portrait-640.jpg 640w, /fixtures/device-screenshot--tablet-portrait-800.jpg 800w, /fixtures/device-screenshot--tablet-portrait-1024.jpg 1024w, /fixtures/device-screenshot--tablet-portrait-1366.jpg 1366w, /fixtures/device-screenshot--tablet-portrait-1536.jpg 1536w, /fixtures/device-screenshot--tablet-portrait-1920.jpg 1920w"
                    sizes="(min-width: 600px) 150vw, 100vw"
                    ratio="2048/2732"
                    zoom
                    style="background-color: hsl(233, 33%, 97%);"
        >
          <bolt-ratio ratio="512/683">
            <replace-with-children class="c-bolt-ratio"
                                   style="padding-bottom: calc((683 / 512) * 100%); --aspect-ratio: 0.74963396778917;"
            >
              <img class="c-bolt-image__image-placeholder"
                   data-zoom="/fixtures/device-screenshot--tablet-portrait.jpg"
                   src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
              >
              <img class="c-bolt-image__image c-bolt-image__lazyload c-bolt-image__lazyload--fade c-bolt-image__lazyload--blur js-lazyload"
                   data-srcset="/fixtures/device-screenshot--tablet-portrait-50.jpg 50w, /fixtures/device-screenshot--tablet-portrait-100.jpg 100w, /fixtures/device-screenshot--tablet-portrait-200.jpg 200w, /fixtures/device-screenshot--tablet-portrait-320.jpg 320w, /fixtures/device-screenshot--tablet-portrait-480.jpg 480w, /fixtures/device-screenshot--tablet-portrait-640.jpg 640w, /fixtures/device-screenshot--tablet-portrait-800.jpg 800w, /fixtures/device-screenshot--tablet-portrait-1024.jpg 1024w, /fixtures/device-screenshot--tablet-portrait-1366.jpg 1366w, /fixtures/device-screenshot--tablet-portrait-1536.jpg 1536w, /fixtures/device-screenshot--tablet-portrait-1920.jpg 1920w"
                   data-sizes="(min-width: 600px) 150vw, 100vw"
                   src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                   data-zoom="/fixtures/device-screenshot--tablet-portrait.jpg"
              >
              <noscript>
                <img class="c-bolt-image__image"
                     src="/fixtures/device-screenshot--tablet-portrait.jpg"
                     srcset="/fixtures/device-screenshot--tablet-portrait-50.jpg 50w, /fixtures/device-screenshot--tablet-portrait-100.jpg 100w, /fixtures/device-screenshot--tablet-portrait-200.jpg 200w, /fixtures/device-screenshot--tablet-portrait-320.jpg 320w, /fixtures/device-screenshot--tablet-portrait-480.jpg 480w, /fixtures/device-screenshot--tablet-portrait-640.jpg 640w, /fixtures/device-screenshot--tablet-portrait-800.jpg 800w, /fixtures/device-screenshot--tablet-portrait-1024.jpg 1024w, /fixtures/device-screenshot--tablet-portrait-1366.jpg 1366w, /fixtures/device-screenshot--tablet-portrait-1536.jpg 1536w, /fixtures/device-screenshot--tablet-portrait-1920.jpg 1920w"
                >
              </noscript>
            </replace-with-children>
          </bolt-ratio>
        </bolt-image>
        <div class="c-bolt-image-zoom__overlay">
          <bolt-icon class="c-bolt-image-zoom__overlay-icon"
                     name="search"
                     background="circle"
                     size="xlarge"
          >
          </bolt-icon>
        </div>
      </bolt-image-zoom>
    </div>
  </div>
</bolt-device-viewer>
`;
